--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.13.3 ====================
+
+2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.13.3
+
 2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* stylesheets/toc2html.xsl: 
