Patch from Glynn Foster to fix more compilation issues on Solaris
* src/Makefile.am:
* configure.in:
Patch from Glynn Foster to fix more compilation issues on Solaris

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-01-19  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/Makefile.am: 
+	* configure.in: 
+	Patch from Glynn Foster to fix more compilation 
+	issues on Solaris
+	
 ==================== 2.13.3 ====================
 
 2006-01-18  Don Scorgie  <dscorgie@cvs.gnome.org>
