Fix crashes on malformed info:dir files
* src/yelp-toc-pager.c:
Fix crashes on malformed info:dir files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-20  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-toc-pager.c: 
+	Fix crashes on malformed info:dir files
+
 2006-01-19  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/Makefile.am: 
