--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-21  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2006-01-21  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
 
 	* da.po: Updated Danish translation.
