--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-22  Nickolay V. Shmyrev <nshmyrev@yandex.ru>
+
+	* ru.po: Updated Russian translation by razi.
+
 2006-01-22  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
