--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-01-22  Brent Smith  <gnome@nextreality.net>
+
+	* yelp.desktop.in.in:
+	Add "GTK" to the categories in the .desktop file; fixes
+	#328045
+
 2006-01-21  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-io-channel.c: 
