Changelog: Save file before committing
Changelog:
Save file before committing

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-01-23  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	* configure.in: 
+	Make compilation with Beagle search with newer Beagle
+	Bump minimum Beagle version to 0.2.0
+	
 2006-01-22  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-gecko-utils.cpp:
