updated the README to reflect the requirement on gnome-doc-utils 0.5.2
2006-01-26  Brent Smith  <gnome@nextreality.net>
        * README:
        updated the README to reflect the requirement on gnome-doc-utils 0.5.2
        bumped scrollkeeper version to 0.3.14

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-01-26  Brent Smith  <gnome@nextreality.net>
 
+	* README:
+	updated the README to reflect the requirement on gnome-doc-utils 0.5.2
+	bumped scrollkeeper version to 0.3.14
+
+2006-01-26  Brent Smith  <gnome@nextreality.net>
+
 	* src/yelp-settings.c:
 	Use the /desktop/gnome/interface/document_font_name gconf key
 	for the default font, instead of font_name
