--- a/README
+++ b/README
@@ -11,12 +11,13 @@ Requirments:
 ------------
 
 * GNOME 2.0 ( >= 2.0.2 )
-* A working ScrollKeeper installation ( > 0.3.6 )
+* A working ScrollKeeper installation ( > 0.3.14 )
+* GNOME Documentation Utilities (gnome-doc-utils > 0.5.2)
 * Version 4.1.2 of the DocBook XML DTD
 
-Note that Yelp does not require the DocBook XSLT stylesheets.  Yelp
-uses its own custom stylesheets, which are faster and allow better
-integration with Yelp.
+Note that Yelp requires gnome-doc-utils for the DocBook XSLT stylesheets.  
+These stylesheets are optimized for speed and allow better integration 
+with Yelp.
 
 
 Reporting bugs:
@@ -49,8 +50,8 @@ Help on setting your system up:
 
 A brief note on how to get the docbook stuff to work. 
 
-1) Install Scrollkeeper 0.3.6: 
-http://prdownloads.sourceforge.net/scrollkeeper/scrollkeeper-0.3.6.tar.gz
+1) Install Scrollkeeper 0.3.14: 
+http://prdownloads.sourceforge.net/scrollkeeper/scrollkeeper-0.3.14.tar.gz
 
 Edit /etc/scrollkeeper.conf to include your $(gnome2_prefix)/share/omf
 directory. For best use in GNOME 2.0, remove all other directories. 
