--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-28  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-search-pager.c: 
+	More robust handling when doing basic search.  Should fix #328464
+
 2006-01-28  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-toc-pager.c: (create_toc_from_index):
