--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-29  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-html.cpp: 
+	Workaround for a11y issues.  Should fix bug #157941
+
 2006-01-29  Brent Smith  <gnome@nextreality.net>
 
 	* data/man.xml.in:
