--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.13.3 ====================
+
+2006-01-30  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.13.4
+
 2006-01-30  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
