--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-31  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
+
+	* da.po: Updated Danish translation.
+
 2006-01-31  Slobodan D. Sredojevic  <slobo@akrep.be>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation
