--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-31  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+	
 2006-01-31  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
 
 	* da.po: Updated Danish translation.
