Remove some references to functions (in comments) that no longer exist.
2006-02-02  Brent Smith  <gnome@nextreality.net>
        * src/yelp-base.c: (yelp_base_new):
        Remove some references to functions (in comments) that no longer exist.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-02  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-base.c: (yelp_base_new):
+	Remove some references to functions (in comments) that no longer exist.
+
 ==================== 2.13.3 ====================
 
 2006-01-30  Shaun McCance  <shaunm@gnome.org>
