--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-02-12  Brent Smith  <gnome@nextreality.net>
 
+	* NEWS:
+	* configure.in:
+	- Version 2.13.5
+
+2006-02-12  Brent Smith  <gnome@nextreality.net>
+
 	* src/yelp-html.cpp:
 	Reverting DonS' a11y patch as it causes an abort in some cases when it
 	can't find the a11y registry.
