--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-13  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2006-02-12 Kostas Papadimas <pkst@gnome.org>
 
 	* el.po Updated Greek Translation
