--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-14  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2006-02-13  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
