--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-15  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-02-14  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Updated German translation.
