--- a/po/et.po
+++ b/po/et.po
@@ -1,21 +1,21 @@
 # Yelp eesti keele tõlge.
-# Estonian translation of Yelp
+# Estonian translation of Yelp.
 #
-# Copyright (C) 2002-2005 Free Software Foundation, Inc.
+# Copyright (C) 2002-2006 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Yelp package.
 #
 # Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.
-# Allan Sims <allsi@eau.ee>, 2003
+# Allan Sims <allsi@eau.ee>, 2003.
 # Priit Laes <amd store20 com>, 2005, 2006.
-# Ivar Smolin <okul@linux.ee>, 2005
+# Ivar Smolin <okul@linux.ee>, 2005, 2006.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp\n"
+"Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-09 09:15+0100\n"
-"PO-Revision-Date: 2006-02-10 00:42+0300\n"
-"Last-Translator: Priit Laes <amd@store20.com>\n"
+"PO-Revision-Date: 2006-02-14 20:28+0200\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgstr ""
 #: ../data/info.xml.in.h:1
 #: ../src/yelp-toc-pager.c:1230
 msgid "GNU Info Pages"
-msgstr "GNU infolehed"
+msgstr "GNU teabelehed"
 
 #: ../data/man.xml.in.h:1
 #: ../data/toc.xml.in.h:4
@@ -115,7 +115,7 @@ msgstr "X11 rakendused"
 
 #: ../data/man.xml.in.h:22
 msgid "X11 Configuration"
-msgstr "X11 seadistus"
+msgstr "X11 sätted"
 
 #: ../data/man.xml.in.h:23
 msgid "X11 Devices"
@@ -367,15 +367,15 @@ msgstr "Tundmatu viga"
 
 #: ../src/yelp-error.c:46
 msgid "Could not load document"
-msgstr "Dokumenti ei suudetud laadida"
+msgstr "Dokumenti pole võimalik laadida"
 
 #: ../src/yelp-error.c:48
 msgid "Could not load section"
-msgstr "Peatükki ei suudeta laadida"
+msgstr "Peatükki pole võimalik laadida"
 
 #: ../src/yelp-error.c:50
 msgid "Could not read the table of contents"
-msgstr "Sisukorda ei suudeta lugeda"
+msgstr "Sisukorda pole võimalik lugeda"
 
 #: ../src/yelp-error.c:52
 msgid "Unsupported Format"
@@ -383,15 +383,15 @@ msgstr "Toetamata vorming"
 
 #: ../src/yelp-error.c:54
 msgid "Could not read document"
-msgstr "Dokumenti ei suudeta lugeda"
+msgstr "Dokumenti pole võimalik lugeda"
 
 #: ../src/yelp-error.c:56
 msgid "Could not process document"
-msgstr "Dokumenti ei suudeta töödelda"
+msgstr "Dokumenti pole võimalik töödelda"
 
 #: ../src/yelp-error.c:66
 msgid "No information is available about the error."
-msgstr "Vea kohta puudub teave."
+msgstr "Vea kohta puuduvad andmed."
 
 #: ../src/yelp-info-pager.c:190
 #, c-format
@@ -410,11 +410,11 @@ msgstr "Kasutatava puhverkataloogi määramine"
 #: ../src/yelp-main.c:133
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Yelp'i ei suudeta aktiveerida: '%s'"
+msgstr "Yelp'i pole võimalik aktiveerida: '%s'"
 
 #: ../src/yelp-main.c:152
 msgid "Could not open new window."
-msgstr "Uut akent ei õnnestu avada."
+msgstr "Uut akent pole võimalik avada."
 
 #: ../src/yelp-main.c:400
 #: ../yelp.desktop.in.in.h:2
@@ -424,7 +424,7 @@ msgstr "Abi"
 #: ../src/yelp-man-pager.c:185
 #, c-format
 msgid "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is formatted incorrectly."
-msgstr "Faili ‘%s’ ei õnnestunud analüüsida.  Faili kas pole olemas või on see valesti vormindatud."
+msgstr "Faili ‘%s’ pole võimalik analüüsida.  Faili kas pole olemas või on see valesti vormindatud."
 
 #: ../src/yelp-pager.c:122
 msgid "Document Information"
@@ -493,12 +493,12 @@ msgstr "Määrab trükitavate lehtede vahemiku lõpu"
 
 #: ../src/yelp-search-pager.c:380
 msgid "Your search could not be processed. There is no connection to the beagle daemon."
-msgstr "Sinu otsingut ei suudetud töödelda. Beagle'i deemoniga ei ole ühendust loodud."
+msgstr "Sinu otsingut pole võimalik töödelda. Beagle'i deemoniga ei ole ühendust loodud."
 
 #: ../src/yelp-search-pager.c:683
 #, c-format
 msgid "Your search could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
-msgstr "Sinu otsingut ei õnnestu töödelda. Faili ‘%s’ kas on puudu või pole tegemist korrektse XSLT laaditabeliga."
+msgstr "Sinu otsingut pole võimalik töödelda. Faili ‘%s’ kas on puudu või pole tegemist korrektse XSLT laaditabeliga."
 
 #: ../src/yelp-search-pager.c:785
 #: ../src/yelp-toc-pager.c:1481
@@ -565,7 +565,7 @@ msgstr "Loe %s-i infolehte"
 #: ../src/yelp-toc-pager.c:1197
 #, c-format
 msgid "The table of contents could not be loaded. The file ‘%s’ is either missing or is not well-formed XML."
-msgstr "Sisukorda ei õnnestunud laadida. Fail ‘%s’ kas puudub või on valesti vormindatud XML'is."
+msgstr "Sisukorda pole võimalik laadida. Fail ‘%s’ kas puudub või on valesti vormindatud XML'is."
 
 #: ../src/yelp-toc-pager.c:1219
 msgid "Command Line Help"
@@ -574,7 +574,7 @@ msgstr "Käsurea abi"
 #: ../src/yelp-toc-pager.c:1328
 #, c-format
 msgid "The table of contents could not be processed. The file ‘%s’ is either missing or is not a valid XSLT stylesheet."
-msgstr "Sisukorda ei õnnestu töödelda. Faili ‘%s’ kas on puudu või pole tegemist korrektse XSLT laaditabeliga."
+msgstr "Sisukorda pole võimalik töödelda. Faili ‘%s’ kas on puudu või pole tegemist korrektse XSLT laaditabeliga."
 
 #: ../src/yelp-window.c:311
 msgid "_File"
@@ -777,7 +777,7 @@ msgstr "Otsi _eelmist"
 #: ../src/yelp-window.c:1321
 #, c-format
 msgid "A transformation context could not be created for the file ‘%s’. The format may not be supported."
-msgstr "Ümberkujunduskonteksti faili '%s' jaoks ei suudetud luua. Võimalik, et vorming ei ole toetatud."
+msgstr "Ümberkujunduskonteksti faili '%s' jaoks pole võimalik luua. Võimalik, et vorming ei ole toetatud."
 
 #: ../src/yelp-window.c:1350
 #: ../src/yelp-window.c:1764
@@ -803,8 +803,8 @@ msgid "translator-credits"
 msgstr ""
 "Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.\n"
 "Allan Sims <allsi@eau.ee>, 2003.\n"
-"Priit Laes <amd@store20.com>, 2005, 2006\n"
-"Ivar Smolin <okul@linux.ee>, 2005."
+"Priit Laes <amd@store20.com>, 2005, 2006.\n"
+"Ivar Smolin <okul@linux.ee>, 2005, 2006.."
 
 #: ../src/yelp-window.c:2663
 msgid "A documentation browser and viewer for the Gnome Desktop."
@@ -813,22 +813,15 @@ msgstr "Dokumentatsioonisirvija Gnome töölaua jaoks."
 #: ../src/yelp-xslt-pager.c:195
 #, c-format
 msgid "The file ‘%s’ could not be parsed. Either the file does not exist, or it is improperly formatted."
-msgstr "Faili ‘%s’ ei õnnestu analüüsida. Seda kas pole olema või on see valesti vormindatud."
+msgstr "Faili ‘%s’ pole võimalik analüüsida. Seda kas pole olema või on see valesti vormindatud."
 
 #: ../src/yelp-xslt-pager.c:216
 #: ../src/yelp-xslt-pager.c:229
 #, c-format
 msgid "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, or it is not a valid XSLT stylesheet."
-msgstr "Dokumenti ‘%s’ ei õnnestu töödelda. Fail ‘%s’ on kas puudu või pole tegemist korrektse XSLT laaditabeliga."
+msgstr "Dokumenti ‘%s’ pole võimalik töödelda. Fail ‘%s’ on kas puudu või pole tegemist korrektse XSLT laaditabeliga."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Abistab GNOMEi kasutamisel"
-
-#~ msgid "<b>_Bookmarks:</b>"
-#~ msgstr "<b>_Järjehoidjad:</b>"
-#~ msgid "<b>_Title:</b>"
-#~ msgstr "<b>_Pealkiri:</b>"
-#~ msgid "Unknown Section"
-#~ msgstr "Tundmatu jaotis"
 
