Focus print preview on html widget, fixing funny window-not-resizing
* src/yelp-print.c:
Focus print preview on html widget, fixing funny
window-not-resizing issues

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-15  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-print.c:
+	Focus print preview on html widget, fixing funny
+	window-not-resizing issues
+
 2006-02-12  Brent Smith  <gnome@nextreality.net>
 
 	* NEWS:
