Escape characters when searching, fixes #331422
* src/yelp-search-pager.c:
Escape characters when searching, fixes #331422

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-16  Don Scorgie  <don@Madaline>
+
+	* src/yelp-search-pager.c: 
+	Escape characters when searching, fixes #331422
+
 2006-02-15  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-print.c:
