--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-02-16  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-main.c: (main):
+	set MOZ_DISABLE_PANGO in the environment to fix broken rendering of
+	certain characters, fixes #329461
+
 2006-02-16  Don Scorgie  <don@Madaline>
 
 	* src/yelp-search-pager.c: 
