--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-19  Satoru SATOH <ss@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2006-02-16  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Hungarian translation updated by Mate ORY.
