Credit Joe Shaw for the last patch
Credit Joe Shaw for the last patch

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* stylesheets/search-header.xsl:
 	* stylesheets/search2html.xsl:
 	Removed redundant search text entry; search-header.xsl no longer
-	needed and removed from CVS.  Fixes #331604
+	needed and removed from CVS.  Patch from Joe Shaw, Fixes #331604
 
 2006-02-18  Brent Smith  <gnome@nextreality.net>
 
