Remove search-header.xsl from Makefile. Allows compilation again
* stylesheets/Makefile.am:
Remove search-header.xsl from Makefile.  Allows compilation again

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-19  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* stylesheets/Makefile.am: 
+	Remove search-header.xsl from Makefile.  Allows compilation again
+
 2006-02-18  Brent Smith  <gnome@nextreality.net>
 
 	* stylesheets/search-header.xsl:
