--- a/po/et.po
+++ b/po/et.po
@@ -5,16 +5,16 @@
 # This file is distributed under the same license as the Yelp package.
 #
 # Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.
-# Allan Sims <allsi@eau.ee>, 2003
-# Priit Laes <amd store20 com>, 2005
-# Ivar Smolin <okul@linux.ee>, 2005
+# Allan Sims <allsi@eau.ee>, 2003.
+# Priit Laes <amd store20 com>, 2005.
+# Ivar Smolin <okul@linux.ee>, 2005, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.12\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-10-17 21:04+0200\n"
-"PO-Revision-Date: 2005-05-29 10:54+0300\n"
+"PO-Revision-Date: 2006-02-14 20:28+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -99,7 +99,7 @@ msgstr "X11 rakendused"
 
 #: ../data/man.xml.in.h:20
 msgid "X11 Configuration"
-msgstr "X11 seadistus"
+msgstr "X11 sätted"
 
 #: ../data/man.xml.in.h:21
 msgid "X11 Devices"
@@ -335,9 +335,7 @@ msgstr "Dokumendi jaotised"
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not well-formed XML."
-msgstr ""
-"Faili ‘%s’ ei ole võimalik analüüsida. Seda kas pole olemas või on tegemist "
-"valesti vormindatud XML'iga."
+msgstr "Faili ‘%s’ ei ole võimalik analüüsida. Seda kas pole olemas või on tegemist valesti vormindatud XML'iga."
 
 #: ../src/yelp-db-pager.c:494
 msgid "Unknown Section"
@@ -349,15 +347,15 @@ msgstr "Tundmatu viga"
 
 #: ../src/yelp-error.c:46
 msgid "Could not load document"
-msgstr "Dokumenti ei suudetud laadida"
+msgstr "Dokumenti pole võimalik laadida"
 
 #: ../src/yelp-error.c:48
 msgid "Could not load section"
-msgstr "Peatükki ei suudeta laadida"
+msgstr "Peatükki pole võimalik laadida"
 
 #: ../src/yelp-error.c:50
 msgid "Could not read the table of contents"
-msgstr "Sisukorda ei suudeta lugeda"
+msgstr "Sisukorda pole võimalik lugeda"
 
 #: ../src/yelp-error.c:52
 msgid "Unsupported Format"
@@ -365,24 +363,22 @@ msgstr "Toetamata vorming"
 
 #: ../src/yelp-error.c:54
 msgid "Could not read document"
-msgstr "Dokumenti ei suudeta lugeda"
+msgstr "Dokumenti pole võimalik lugeda"
 
 #: ../src/yelp-error.c:56
 msgid "Could not process document"
-msgstr "Dokumenti ei suudeta töödelda"
+msgstr "Dokumenti pole võimalik töödelda"
 
 #: ../src/yelp-error.c:66
 msgid "No information is available about the error."
-msgstr "Vea kohta puudub teave."
+msgstr "Vea kohta puuduvad andmed."
 
 #: ../src/yelp-io-channel.c:98
 #, c-format
 msgid ""
 "The file ‘%s’ could not be read and decoded. The file may be compressed in "
 "an unsupported format."
-msgstr ""
-"Faili ‘%s’ ei ole võimalik lugeda ja dekodeerida. Arvatavasti on fail "
-"toetamata vormingus või pakitud kujul."
+msgstr "Faili ‘%s’ ei ole võimalik lugeda ja dekodeerida. Arvatavasti on fail toetamata vormingus või pakitud kujul."
 
 #: ../src/yelp-main.c:95
 msgid "Define which cache directory to use"
@@ -391,11 +387,11 @@ msgstr "Kasutatava puhverkataloogi määramine"
 #: ../src/yelp-main.c:129
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "Yelp'i ei suudeta aktiveerida: '%s'"
+msgstr "Yelp'i pole võimalik aktiveerida: '%s'"
 
 #: ../src/yelp-main.c:148
 msgid "Could not open new window."
-msgstr "Uut akent ei õnnestu avada."
+msgstr "Uut akent pole võimalik avada."
 
 #: ../src/yelp-main.c:325 ../yelp.desktop.in.in.h:2
 msgid "Help"
@@ -406,9 +402,7 @@ msgstr "Abi"
 msgid ""
 "The file ‘%s’ could not be parsed.  Either the file does not exist, or it is "
 "formatted incorrectly."
-msgstr ""
-"Faili ‘%s’ ei õnnestunud analüüsida.  Faili kas pole olemas või on see "
-"valesti vormindatud."
+msgstr "Faili ‘%s’ pole võimalik analüüsida.  Faili kas pole olemas või on see valesti vormindatud."
 
 #: ../src/yelp-pager.c:122
 msgid "Document Information"
@@ -462,18 +456,14 @@ msgstr "Loe %s käsiraamatut"
 msgid ""
 "The table of contents could not be loaded. The file ‘%s’ is either missing "
 "or is not well-formed XML."
-msgstr ""
-"Sisukorda ei õnnestunud laadida. Fail ‘%s’ kas puudub või on valesti "
-"vormindatud XML'is."
+msgstr "Sisukorda pole võimalik laadida. Fail ‘%s’ kas puudub või on valesti vormindatud XML'is."
 
 #: ../src/yelp-toc-pager.c:883
 #, c-format
 msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
 "missing or is not a valid XSLT stylesheet."
-msgstr ""
-"Sisukorda ei õnnestu töödelda. Faili ‘%s’ kas on puudu või pole tegemist "
-"korrenktse XSLT laaditabeliga."
+msgstr "Sisukorda pole võimalik töödelda. Faili ‘%s’ kas on puudu või pole tegemist korrektse XSLT laaditabeliga."
 
 #: ../src/yelp-toc-pager.c:1037 ../src/yelp-xslt-pager.c:368
 msgid "No href attribute found on yelp:document"
@@ -616,9 +606,7 @@ msgstr "Faili ressursiidentifikaator (URI) on vigane."
 msgid ""
 "The Uniform Resource Identifier ‘%s’ is invalid or does not point to an "
 "actual file."
-msgstr ""
-"Ressursiidentifikaator (URI) ‘%s’ on vigane või ei viita see tegelikult "
-"failile."
+msgstr "Ressursiidentifikaator (URI) ‘%s’ on vigane või ei viita see tegelikult failile."
 
 #: ../src/yelp-window.c:797 ../src/yelp-window.c:1152
 msgid "Man pages are not supported in this version."
@@ -632,9 +620,7 @@ msgstr "Käesolev versioon ei toeta GNU infolehti"
 msgid ""
 "SGML documents are no longer supported. Please ask the author of the "
 "document to convert to XML."
-msgstr ""
-"SGML dokumendid ei ole enam toetatud. Palu dokumendi autoril see dokument "
-"XML vormingusse ümber teisendada."
+msgstr "SGML dokumendid ei ole enam toetatud. Palu dokumendi autoril see dokument XML vormingusse ümber teisendada."
 
 #: ../src/yelp-window.c:1036
 msgid "Find:"
@@ -653,9 +639,7 @@ msgstr "Otsi _eelmist"
 msgid ""
 "A transformation context could not be created for the file ‘%s’. The format "
 "may not be supported."
-msgstr ""
-"Ümberkujunduskonteksti faili '%s' jaoks ei suudetud luua. Võimalik, et "
-"vorming ei ole toetatud."
+msgstr "Ümberkujunduskonteksti faili '%s' jaoks pole võimalik luua. Võimalik, et vorming ei ole toetatud."
 
 #: ../src/yelp-window.c:1199 ../src/yelp-window.c:1623
 #: ../src/yelp-window.c:1690
@@ -664,18 +648,14 @@ msgid ""
 "The section ‘%s’ does not exist in this document. If you were directed to "
 "this section from a Help button in an application, please report this to the "
 "maintainers of that application."
-msgstr ""
-"Peatükki ‘%s’ pole selles dokumendis olemas. Kui sind suunati siia rakenduse "
-"Abiteabe nupult, siis palun teata sellest veast rakenduse hooldajatele."
+msgstr "Peatükki ‘%s’ pole selles dokumendis olemas. Kui sind suunati siia rakenduse Abiteabe nupult, siis palun teata sellest veast rakenduse hooldajatele."
 
 #: ../src/yelp-window.c:1314
 #, c-format
 msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
 "not have permissions to read it."
-msgstr ""
-"Faili ‘%s’ ei ole loetav.  Seda võib mitte olemas olla või pole sul "
-"piisavaid selle lugemiseks."
+msgstr "Faili ‘%s’ ei ole loetav.  Seda võib mitte olemas olla või pole sul piisavaid selle lugemiseks."
 
 #: ../src/yelp-window.c:1358
 msgid "Loading..."
@@ -688,8 +668,8 @@ msgid "translator-credits"
 msgstr ""
 "Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.\n"
 "Allan Sims <allsi@eau.ee>, 2003.\n"
-"Priit Laes <amd@store20.com>, 2005.\n"
-"Ivar Smolin <okul@linux.ee>, 2005."
+"Priit Laes <amd@store20.com>, 2005, 2006.\n"
+"Ivar Smolin <okul@linux.ee>, 2005, 2006."
 
 #: ../src/yelp-window.c:2208
 msgid "A documentation browser and viewer for the Gnome Desktop."
@@ -700,18 +680,14 @@ msgstr "Dokumentatsioonisirvija Gnome töölaua jaoks."
 msgid ""
 "The file ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "improperly formatted."
-msgstr ""
-"Faili ‘%s’ ei õnnestu analüüsida. Seda kas pole olema või on see valesti "
-"vormindatud."
+msgstr "Faili ‘%s’ pole võimalik analüüsida. Seda kas pole olema või on see valesti vormindatud."
 
 #: ../src/yelp-xslt-pager.c:216 ../src/yelp-xslt-pager.c:229
 #, c-format
 msgid ""
 "The document ‘%s’ could not be processed. The file ‘%s’ is either missing, "
 "or it is not a valid XSLT stylesheet."
-msgstr ""
-"Dokumenti ‘%s’ ei õnnestu töödelda. Fail ‘%s’ on kas puudu või pole tegemist "
-"korrektse XSLT laaditabeliga."
+msgstr "Dokumenti ‘%s’ pole võimalik töödelda. Fail ‘%s’ on kas puudu või pole tegemist korrektse XSLT laaditabeliga."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
