--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-26  Takeshi AIHANA <takeshi.aihana@gmail.com>
+
+	* ja.po: Updated Japanese translation.
+
 2006-02-25  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
