--- a/po/ja.po
+++ b/po/ja.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-02-19 18:10+0900\n"
-"PO-Revision-Date: 2006-02-19 18:11+0900\n"
-"Last-Translator: Satoru SATOH <ss@gnome.gr.jp>\n"
+"POT-Creation-Date: 2006-02-26 15:56+0900\n"
+"PO-Revision-Date: 2006-02-26 15:55+0900\n"
+"Last-Translator: Takeshi AIHANA <aihana@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -75,11 +75,11 @@ msgstr "概要"
 
 #: ../data/man.xml.in.h:14
 msgid "POSIX Functions"
-msgstr "POSIX 関数"
+msgstr "POSIX の関数"
 
 #: ../data/man.xml.in.h:15
 msgid "POSIX Headers"
-msgstr "POSIX ヘッダ"
+msgstr "POSIX のヘッダ"
 
 #: ../data/man.xml.in.h:16
 msgid "Perl Functions"
@@ -332,12 +332,12 @@ msgstr "ブックマークを削除します"
 #: ../src/yelp-bookmarks.c:320
 #, c-format
 msgid "A bookmark titled %s already exists for this page."
-msgstr "%s というこのページのブックマークは既にあります"
+msgstr "%s というページのブックマークは既にあります"
 
 #: ../src/yelp-bookmarks.c:397
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
-msgstr "<b>%s</b> というこのページのブックマークは既にあります"
+msgstr "<b>%s</b> というページのブックマークは既にあります"
 
 #: ../src/yelp-bookmarks.c:425
 msgid "Document Sections"
@@ -390,8 +390,8 @@ msgid ""
 "The file  ‘%s’ could not be parsed. Either the file does not exist, or it is "
 "not a well-formed info page."
 msgstr ""
-"ファイル '%s' を解析できませんでした。ファイルが存在しないか、またはInfo ペー"
-"ジの形式が不適切です"
+"ファイル '%s' を解析できませんでした。ファイルが存在しないか、または Info "
+"ページの形式が不適切です。"
 
 #: ../src/yelp-io-channel.c:101
 #, c-format
@@ -438,7 +438,7 @@ msgstr "ドキュメントの YelpDocInfo 構造体"
 
 #: ../src/yelp-print.c:138
 msgid "Preparing to print"
-msgstr "印刷準備中"
+msgstr "印刷の準備中"
 
 #: ../src/yelp-print.c:275
 msgid "Pages"
@@ -446,11 +446,11 @@ msgstr "ページ"
 
 #: ../src/yelp-print.c:348
 msgid "Generating PDF is not currently supported"
-msgstr "今のところ PDF 出力はサポートされていません。"
+msgstr "このバージョンでは PDF への出力はサポートしていません"
 
 #: ../src/yelp-print.c:356
 msgid "Printing is not supported on this printer"
-msgstr "このプリンタへの印刷はサポートされていません。"
+msgstr "このプリンタへの印刷はサポートしていません"
 
 #: ../src/yelp-print.c:359
 #, c-format
@@ -458,20 +458,20 @@ msgid ""
 "You were trying to print to a printer using the \"%s\" driver.  This program "
 "requires a PostScript printer driver."
 msgstr ""
-"\"%s\" ドライバを使った印刷を試みましたが、PostScript プリンタドライバが必要"
-"です。"
+"ドライバ \"%s\" を使ってプリンタへ印刷しようとしましたが、PostScript のプリン"
+"タ・ドライバが必要です。"
 
 #: ../src/yelp-print.c:402
 msgid "An error occurred while printing"
-msgstr "印刷中にエラーが起こりました"
+msgstr "印刷する際にエラーが発生しました"
 
 #: ../src/yelp-print.c:406
 msgid "It was not possible to print your document"
-msgstr "文書を印刷できませんでした"
+msgstr "ドキュメントを印刷できませんでした"
 
 #: ../src/yelp-print.c:466
 msgid "Printing"
-msgstr "印刷"
+msgstr "印刷中"
 
 #: ../src/yelp-print.c:493
 msgid "<b>Printing</b>"
@@ -479,32 +479,25 @@ msgstr "<b>印刷</b>"
 
 #: ../src/yelp-print.c:495
 msgid "Waiting to print"
-msgstr "印刷待機中"
+msgstr "待機中"
 
 #: ../src/yelp-print.c:559
 msgid "_From:"
-msgstr "From(_F):"
+msgstr "開始(_F):"
 
 #: ../src/yelp-print.c:572
 msgid "Sets the start of the range of pages to be printed"
-msgstr "印刷する区間の最初のページを指定"
+msgstr "印刷を開始するページを指定して下さい"
 
 #: ../src/yelp-print.c:574
 msgid "_To:"
-msgstr "To(_T):"
+msgstr "終了(_T):"
 
 #: ../src/yelp-print.c:587
 msgid "Sets the end of the range of pages to be printed"
-msgstr "印刷する区間の最後のページを指定"
+msgstr "印刷を終了するページを指定して下さい"
 
-#: ../src/yelp-search-pager.c:380
-msgid ""
-"Your search could not be processed. There is no connection to the beagle "
-"daemon."
-msgstr ""
-"検索を実行できませんでした。Beagle デーモンが起動されていないようです。"
-
-#: ../src/yelp-search-pager.c:683
+#: ../src/yelp-search-pager.c:675
 #, c-format
 msgid ""
 "Your search could not be processed. The file ‘%s’ is either missing or is "
@@ -513,21 +506,21 @@ msgstr ""
 "検索を実行できませんでした。ファイル '%s' が存在しないか、または妥当な XSLT "
 "スタイルシートではないようです。"
 
-#: ../src/yelp-search-pager.c:785 ../src/yelp-toc-pager.c:1506
+#: ../src/yelp-search-pager.c:777 ../src/yelp-toc-pager.c:1506
 #: ../src/yelp-xslt-pager.c:368
 msgid "No href attribute found on yelp:document"
 msgstr "yelp:document に HREF 属性がありませんでした"
 
-#: ../src/yelp-search-pager.c:799 ../src/yelp-toc-pager.c:1520
+#: ../src/yelp-search-pager.c:791 ../src/yelp-toc-pager.c:1520
 #: ../src/yelp-xslt-pager.c:384
 msgid "Out of memory"
 msgstr "メモリが足りません"
 
-#: ../src/yelp-search-pager.c:840 ../src/yelp-toc-pager.c:1570
+#: ../src/yelp-search-pager.c:832 ../src/yelp-toc-pager.c:1570
 msgid "Help Contents"
 msgstr "ヘルプの目次"
 
-#: ../src/yelp-search-pager.c:1116 ../src/yelp-toc-pager.c:499
+#: ../src/yelp-search-pager.c:1108 ../src/yelp-toc-pager.c:499
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr "OMF ファイル '%s' を読み込めませんでした。"
@@ -582,7 +575,7 @@ msgstr ""
 
 #: ../src/yelp-toc-pager.c:1228
 msgid "Command Line Help"
-msgstr "コマンド行ヘルプ"
+msgstr "コマンド"
 
 #: ../src/yelp-toc-pager.c:1342
 #, c-format
@@ -655,15 +648,15 @@ msgstr "前方検索(_V)"
 
 #: ../src/yelp-window.c:367
 msgid "Find previous occurrence of the word or phrase"
-msgstr "語句またはフレーズが前にあった場所を検索"
+msgstr "ドキュメントの先頭に向かって単語または文字列を検索します"
 
 #: ../src/yelp-window.c:370
 msgid "Find Ne_xt"
-msgstr "次を検索(_X)"
+msgstr "後方検索(_X)"
 
 #: ../src/yelp-window.c:372
 msgid "Find next occurrence of the word or phrase"
-msgstr "語句またはフレーズが次にある場所を検索"
+msgstr "ドキュメントの末尾に向かって単語または文字列を検索します"
 
 #: ../src/yelp-window.c:375
 msgid "_Preferences"
@@ -861,9 +854,3 @@ msgstr ""
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "GNOME のヘルプを手にいれます"
-
-#~ msgid "<b>_Bookmarks:</b>"
-#~ msgstr "<b>ブックマーク(_B):</b>"
-
-#~ msgid "<b>_Title:</b>"
-#~ msgstr "<b>タイトル(_T):</b>"
