Brent Smith <gnome@nextreality.net> Release 2.13.6
Brent Smith <gnome@nextreality.net>
	Release 2.13.6

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.13.6 ====================
+
+2006-02-26  Brent Smith  <gnome@nextreality.net>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.13.6
+
 2006-02-19  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-search-pager.c: (search_pager_process),
