Remove score when searching with Beagle
* src/yelp-search-pager.c:
Remove score when searching with Beagle

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* stylesheets/search2html.xsl: 
 	* src/yelp-search-pager.c: 
 	While slow searching, sort the results to provide some sanity
+	Remove score when searching with Beagle
 	
 	* src/yelp-search-pager.c: 
 	Look for spaces when processing man page search results
