Translation updated by Ivar Smolin.
2006-02-28  Priit Laes  <amd@store20.com>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-09 09:15+0100\n"
-"PO-Revision-Date: 2006-02-14 20:28+0200\n"
+"PO-Revision-Date: 2006-02-28 08:53+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -249,7 +249,7 @@ msgstr "_Järjehoidjad:"
 
 #: ../data/ui/yelp.glade.h:11
 msgid "_Browse with caret"
-msgstr "_Sirvimisel näita tekstikursorit"
+msgstr "_Tekstikursori näitamine sirvimisel"
 
 #: ../data/ui/yelp.glade.h:12
 msgid "_Find:"
@@ -277,7 +277,7 @@ msgstr "_Pealkiri:"
 
 #: ../data/ui/yelp.glade.h:18
 msgid "_Use system fonts"
-msgstr "_Kasuta süsteemseid kirjatüüpe"
+msgstr "Süsteemsete _kirjatüüpide kasutamine"
 
 #: ../data/ui/yelp.glade.h:19
 msgid "_Variable width:"
@@ -662,7 +662,7 @@ msgstr "_Tagasi"
 
 #: ../src/yelp-window.c:394
 msgid "Show previous page in history"
-msgstr "Näitab eelmist lehekülge ajaloos"
+msgstr "Ajaloos eelmise lehe näitamine"
 
 #: ../src/yelp-window.c:397
 msgid "_Forward"
@@ -670,7 +670,7 @@ msgstr "_Edasi"
 
 #: ../src/yelp-window.c:399
 msgid "Show next page in history"
-msgstr "Näitab järgmist lehekülge ajaloos"
+msgstr "Ajaloos järgmise lehe näitamine"
 
 #: ../src/yelp-window.c:402
 msgid "_Help Topics"
@@ -678,7 +678,7 @@ msgstr "_Abiteabe teemad"
 
 #: ../src/yelp-window.c:404
 msgid "Go to the listing of help topics"
-msgstr "Liigub abiteabe teemade loendisse"
+msgstr "Liikumine abiteabe teemade loendisse"
 
 #: ../src/yelp-window.c:407
 msgid "_Previous Section"
