--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-28  Leonid Kanter <leon@asplinux.ru>
+
+        * ru.po: Updated Russian translation
+
 2006-02-28  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
