--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-01  Vladimer Sichinava <vlsichinava@gmail.com>
+
+	* ka.po: Updated Georgian translation by
+	Malkhaz Barkalaya <malxaz@gmail.com>
+
 2006-03-01  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
