--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-02  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2006-03-01  Vladimer Sichinava <vlsichinava@gmail.com>
 
 	* ka.po: Updated Georgian translation by
