--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-05  Mugurel Tudor  <mugurelu@gnome.ro>
+
+	* ro.po: Updated Romanian translation
+
 2006-03-03  Maxim Dziumanenko <mvd@mylinux.ua>
 
         * uk.po: Updated Ukrainian translation.
