Translation updated by Ivar Smolin.
2006-03-07  Priit Laes  <amd@store20.com>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -804,7 +804,7 @@ msgstr ""
 "Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.\n"
 "Allan Sims <allsi@eau.ee>, 2003.\n"
 "Priit Laes <amd@store20.com>, 2005, 2006.\n"
-"Ivar Smolin <okul@linux.ee>, 2005, 2006.."
+"Ivar Smolin <okul@linux.ee>, 2005, 2006."
 
 #: ../src/yelp-window.c:2663
 msgid "A documentation browser and viewer for the Gnome Desktop."
