--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-10  Guilherme de S. Pastore  <gpastore@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation from Leandro
+	  A. F. Pereira <leandro@linuxmag.com.br>.
+
 2006-03-07  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
