--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-13  Vladimer Sichinava <vlsichinava@gmail.com>
+
+        * ka.po: Updated Georgian translation by
+	  Malkhaz Barkalaya <malxaz@gmail.com>
+		
 2006-03-10  Guilherme de S. Pastore  <gpastore@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation from Leandro
