--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.14.0 ====================
+
+2006-03-12  Brent Smith  <gnome@nextreality.net>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.14.0
+
 2006-02-27  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* stylesheets/search2html.xsl: 
