--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+Changes in 2.14.0:
+------------------
+* Sort search results to provide some sanity                 (Don Scorgie)
+* Fix space problem with manpage search on FreeBSD           (Don Scorgie)
+* Updated translations:
+Vladimir Petkov (bg)
+Ivar Smolin (et)
+Rajesh Ranjan (hi)
+Vladimer Sichinava (ka)
+Žygimantas Beručka (lt)
+Bartosz Kosiorek (pl)
+Leandro A. F. Pereira (pt_BR)
+Mugurel Tudor (ro)
+Leonid Kanter (ru)
+Daniel Nylander (sv)
+Maxim Dzumanenko (uk)
+
+
 Changes in 2.13.6:
 ------------------
 * If beagle daemon is not running fall back to basic search  (Joe Shaw)
