Translation updated by Ivar Smolin.
2006-03-13  Priit Laes  <amd@store20.com>

	* et.po: Translation updated by Ivar Smolin.

--- a/po/et.po
+++ b/po/et.po
@@ -11,7 +11,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp HEAD\n"
+"Project-Id-Version: yelp 2.14\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-09 09:15+0100\n"
 "PO-Revision-Date: 2006-02-28 08:53+0200\n"
@@ -824,4 +824,3 @@ msgstr "Dokumenti ‘%s’ pole võimalik töödelda. Fail ‘%s’ on kas puudu
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Abistab GNOMEi kasutamisel"
-
