--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-13  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-03-13  Vladimer Sichinava <vlsichinava@gmail.com>
 
         * ka.po: Updated Georgian translation by
