--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-13  Runa Bhattacharjee <runa@bengalinux.org>
+
+	* bn.po: Updated Bengali Translation by Suzan.
+
 2006-03-13  Vladimer Sichinava <vlsichinava@gmail.com>
 
         * ka.po: Updated Georgian translation by
