--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-13  Benoît Dejean  <benoit@placenet.org>
+
+	* fr.po: Updated French translation.
+
 2006-03-13  Runa Bhattacharjee <runa@bengalinux.org>
 
 	* bn.po: Updated Bengali Translation by Suzan.
