--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-13  Baris Cicek <baris@teamforce.name.tr>
+
+	* tr.po: Updated Turkish Translation by Serkan Kenar
+	
 2006-03-13  Benoît Dejean  <benoit@placenet.org>
 
 	* fr.po: Updated French translation.
