--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-16  Jérémy Ar Floc'h <jeremy.lefloch@gmail.com>
+
+	* br.po: Added Breton translation.
+
 2006-03-13  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation by Serkan Kenar
