*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 ==================== 2.14.0 ====================
 
+2006-03-17  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
+
+	* configure.in:
+	* po/br.po: Added Breton translation.
+
 2006-03-12  Brent Smith  <gnome@nextreality.net>
 
 	* NEWS:
