--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-17  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
+
+	* br.po: Added Breton translation
+
 2006-03-15  Ales Nyakhaychyk  <nab@mail.by>
 
 	* be.po: Updated Belarusian tanslation.
