--- a/po/et.po
+++ b/po/et.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-09 09:15+0100\n"
-"PO-Revision-Date: 2006-02-28 08:53+0200\n"
+"PO-Revision-Date: 2006-03-19 23:15+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -586,7 +586,7 @@ msgstr "_Redaktor"
 
 #: ../src/yelp-window.c:313
 msgid "_Go"
-msgstr "_Liigu"
+msgstr "_Liikumine"
 
 #: ../src/yelp-window.c:314
 msgid "_Bookmarks"
