--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2006-03-21  Brent Smith  <gnome@nextreality.net>
+
+	* src/gtkentryaction.c: (gtk_entry_action_finalize):
+	* src/yelp-db-pager.c: (db_pager_dispose):
+	* src/yelp-info-pager.c: (info_pager_dispose):
+	* src/yelp-man-pager.c: (man_pager_dispose):
+	* src/yelp-pager.c: (pager_dispose):
+	* src/yelp-search-pager.c: (search_pager_dispose):
+	* src/yelp-toc-pager.c: (toc_pager_dispose):
+	* src/yelp-xslt-pager.c: (xslt_pager_dispose):
+	Don't free an object's private data since it is de-allocated
+	automatically if it is created using g_type_class_add_private()
+
 2006-03-21  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-html.cpp:
