--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-03-21  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-html.cpp:
+        Keep track of timeout and remove when not needed
+        Fixes bug #335306
+
+
 ==================== 2.14.0 ====================
 
 2006-03-17  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
