Display a header on the search results which tells the user how many
2006-03-23  Brent Smith  <gnome@nextreality.net>
        * stylesheets/search2html.xsl:
        Display a header on the search results which tells the user how many
        results were returned from the query.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-03-23  Brent Smith  <gnome@nextreality.net>
+
+	* stylesheets/search2html.xsl:
+	Display a header on the search results which tells the user how many
+	results were returned from the query.
+
 2006-03-22  Brent Smith  <gnome@nextreality.net>
 
 	* src/gtkentryaction.c: (gtk_entry_action_finalize):
