put bug number #334923 in ChangeLog
put bug number #334923 in ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
 	* stylesheets/search2html.xsl:
 	Display a header on the search results which tells the user how many
-	results were returned from the query.
+	results were returned from the query, fixes #334923
 
 2006-03-22  Brent Smith  <gnome@nextreality.net>
 
