Applied a patch from Robert Harris to fix some memory leaks.
2006-03-25  Brent Smith  <gnome@nextreality.net>
        * src/yelp-toc-pager.c: (process_info_pending):
        Applied a patch from Robert Harris to fix some memory leaks.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-25  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-toc-pager.c: (process_info_pending):
+	Applied a patch from Robert Harris to fix some memory leaks.
+
 2006-03-23  Brent Smith  <gnome@nextreality.net>
 
 	* stylesheets/search2html.xsl:
