- Move to goption, bug #335874
* configure.in:
* src/yelp-main.c:
- Move to goption, bug #335874

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-03-30  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* configure.in: 
+	* src/yelp-main.c: 
+	- Move to goption, bug #335874
+	
 2006-03-25  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-toc-pager.c: (process_info_pending):
