--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-30  Guntupalli Karunakar  <karunakar@indlinux.org>
+
+        * configure.in: Added "dz" (Dzongkha) to ALL_LINGUAS.
+
 2006-01-24  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-utils.c: (get_doc_type):
