--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-30  Guntupalli Karunakar  <karunakar@indlinux.org>
+
+        * dz.po: Added Dzongkha translation.
+
 2006-02-21  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
