configure.in: Re-added 'or' (Oriya) to ALL_LINGUAS, after doing a "cvs add"               for po/or.po. Changelog: Changed to reflect this. po/or.po: Added to cvs, which I had forgotten to do earlier. po/Changelog: Changed to reflect this.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-02  Gora Mohanty  <gmohanty@cvs.gnome.org>
+
+        * or.po: Added to cvs, which I had forgotten to do earlier.
+
 2006-04-01  Gora Mohanty  <gmohanty@cvs.gnome.org>
 
         * or.po: Added Oriya translation.
