--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-02  Gora Mohanty  <gmohanty@cvs.gnome.org>
+
+         * configure.in: Re-added 'or' (Oriya) to ALL_LINGUAS, after
+           doing a "cvs add" for po/or.po  
+
 2006-04-02  Brent Smith  <gnome@nextreality.net>
 
 	* configure.in:
