*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-04  Pema Geyleg  <pema.geyleg@gmail.com>
+
+	* configure.in: Added dz (Dzongkha) to ALL_LINGUA
+
 2006-04-03  Brent Smith  <gnome@nextreality.net>
 
 	* data/man.xml.in: Add 3perl to the Perl Functions section
