*** empty log message ***

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+
 2006-04-02  Gora Mohanty  <gmohanty@cvs.gnome.org>
 
         * or.po: Added to cvs, which I had forgotten to do earlier.
