Brent Smith  <gnome@nextreality.net>         * NEWS:         * configure.in:         - Version 2.14.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-04-09  Brent Smith  <gnome@nextreality.net>
 
+	* NEWS:
+	* configure.in:
+	- Version 2.14.1
+
+2006-04-09  Brent Smith  <gnome@nextreality.net>
+
 	* data/ui/yelp-ui.xml: Add "Contents" entry to the Help menu
 	* src/yelp-window.c: (window_help_contents_cb), (window_about_cb):
 	Update the author/copyright lists.  Also provide a callback for
