vi.po: Updated Vietnamese translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-10  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-04-10  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
@@ -11,6 +15,14 @@
 
         * gu.po: Updated Gujarati Translation.
 
+2006-04-07  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
+2006-04-07  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
+
+	* gl.po: Updated Galician Translation.
+	
 2006-04-04  Gora Mohanty  <gmohanty@cvs.gnome.org>
 
         * or.po: Added Oriya translation.
@@ -19,22 +31,46 @@
 
 	* dz.po: Added Dzongkha translation
 
+2006-04-02  Gora Mohanty  <gmohanty@cvs.gnome.org>
+
+        * or.po: Added to cvs, which I had forgotten to do earlier.
+
+2006-04-01  Gora Mohanty  <gmohanty@cvs.gnome.org>
+
+        * or.po: Added Oriya translation.
+
 2006-03-21  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
 
+2006-03-20  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+	
 2006-03-17  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>
 
 	* br.po: Added Breton translation
 
+2006-03-16  Jérémy Ar Floc'h <jeremy.lefloch@gmail.com>
+
+	* br.po: Added Breton translation.
+	
 2006-03-15  Ales Nyakhaychyk  <nab@mail.by>
 
-	* be.po: Updated Belarusian tanslation.
+	* be.po: Updated Belarusian translation.
 
+2006-03-13  Baris Cicek <baris@teamforce.name.tr>
+
+	* tr.po: Updated Turkish Translation by Serkan Kenar
+	
 2006-03-13  Benoît Dejean  <benoit@placenet.org>
 
 	* fr.po: Updated French translation.
 
+2006-03-13  Runa Bhattacharjee <runa@bengalinux.org>
+
+	* bn.po: Updated Bengali Translation by Suzan.
+	
 2006-03-13  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
